<resources>
    <string name="app_name">My Application</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secondName">Отчество</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="age">Возраст</string>
    <string name="height">Рост</string>
    <string name="add_user">Добавить пользователя</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>