<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="65dp"
    android:orientation="horizontal"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/surnameTv"
        android:layout_width="0dp"
        android:layout_weight="1.7"
        style="@style/ListValue"
        android:text="@string/surname" />

    <TextView
        android:id="@+id/nameTv"
        style="@style/ListValue"
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/secondNameTv"
        style="@style/ListValue"
        android:layout_width="0dp"
        android:layout_weight="2.3"
        android:text="@string/secondName"
        />

    <TextView
        android:id="@+id/ageTv"
        style="@style/ListValue"
        android:text="@string/age"
        android:layout_width="0dp"
        android:layout_weight="1.5" />

    <TextView
        android:id="@+id/heightTv"
        style="@style/ListValue"
        android:text="@string/height"
        android:layout_width="0dp"
        android:layout_weight="1" />

</LinearLayout>